--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,14 @@
     <string name="action_settings">Settings</string>
 
     <string name="section_current_time">Current Time</string>
+    <string name="section_events">Events</string>
 
     <string name="title_select_time_zones">Time Zones</string>
+    <string name="title_edit_event">Edit Event</string>
 
     <string name="hours_delta">%s hours</string>
+
+    <string name="event_title_hint">Event Title</string>
+
+    <string name="action_save_title">Save</string>
 </resources>
