--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="event_title_hint">Event Title</string>
 
     <string name="action_save_title">Save</string>
+    <string name="action_search_title">Search</string>
 </resources>
